Replaced some IOUtils usage.